# ArcRoute

./: .gitignore  CLAUDE.md  README.md  nohup.out  pyproject.toml  requirements.txt  setup.sh  test_data.pt  train.py  train.sh  train_data.pt  val_data.pt
baseline/: PU.py  aco.py  benchmark.py  benchmark.sh  ea.py  hr.py  ils.py  infer.py  lp.py  meta.py  meta_models.py  rl_hyb.py  rl_infer.py
common/: cal_reward.py  inter.py  intra.py  local_search.py  nb_utils.py  ops.py  scheduler.py
configs/: README.md
data/: gen.py  info.md
docs/: continue_ils.md  data.md  dynamic.md  grpo_continue.md  policy_continue.md  strategy_data.md
env/: cal_reward.py  env.py  generator.py  local_search.py
eval/: run_grid.py  stats.py
lightning_logs/version_0/: metrics.csv
policy/: decode_stragegy.py  decoder.py  encoder.py  encoder2.py  init.py  policy.py
rl/: grpo.py  ppo.py
scripts/: aco_log.py  bm.sh  bm_trainer.sh  ea_log.py  eval_bm.py  gen_data.py  gen_data.sh  gen_data_benchmark.py  ils_log.py  lp_log.py  measure_scheduler_gap.py  preflight_cities.sh  rl_log.py  train.py  train.sh  train_curriculum.sh  validate_solution.py  verify_milp.py
src/env/: env.py  generator.py  osm_dataset.py
src/eval/: run_grid.py
src/policy/: context.py  decode_strategy.py  decoder.py  encoder.py  policy.py
tests/: benchmark.py  data.py  hr.py  infer.py  lin.py  ox_data.py  sampler.py  stuff.py  temp.py  test_aco.py  test_ea.py  test_eval_grid.py  test_gen.py  test_generator.py  test_grpo.py  test_ils.py  test_lex_selector.py  test_local_search.py  test_lp.py  test_multisize.py  test_scheduler.py  test_stats.py  test_train_config.py  test_validate_solution.py  test_vector_reward.py  test_verify_milp.py
(+1507 files in other folders)
