[project]
name = "hdcarp"
version = "0.1.0"
description = "Hybridising Reinforcement Learning and Heuristics for Hierarchical Directed Arc Routing Problems (HDCARP)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "torch==2.6.0",
    "tensordict==0.6.2",
    "lightning==2.5.0",
    "einops",
    "gurobipy",
    "scipy>=1.15.3",
    "osmnx==2.0.7",
    "shapely==2.0.7",
    "matplotlib>=3.10.9",
    "networkx>=3.4.2",
    "pyscipopt>=6.2.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# src layout: the library packages (env, policy, trainers, solvers, eval, utils)
# live under src/ and are installed (editable) so imports like `from env.env import`
# resolve without relying on the CWD. Entry points live in scripts/.
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
